# FLUX-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  old.cpp
docs/: ToDo.md
docs/cpp/: pragma_or_ifndef.md
docs/notes/: ToDo.md  pragma_vs_ifndef.md
docs/notes/GLAD/: WhatIsGLAD.md
src/: ModelLoader.cpp  ModelLoader.h  ShaderCompiler.cpp  ShaderLoader.cpp  imgui.ini  main.cpp
src/Config/: Config.cpp  Config.h  imgui.ini
src/GUI/ImGUI/: ImGUI.cpp  ImGUI.h  imgui.ini
src/Input/Gamepad/: ControllerInput.cpp  ControllerInput.h
src/Input/Keyboard/: ProcessInput.cpp  ProcessInput.h  imgui.ini
src/Input/Mouse/: MouseInput.cpp  MouseInput.h  imgui.ini
src/Model/: Model.cpp  Model.h
src/Model/Camera/: Camera.h
src/Model/EBO/: EBO.cpp  EBO.h
src/Model/Mesh/: Mesh.cpp  Mesh.h
src/Model/Shader/: shaderClass.cpp  shaderClass.h
src/Model/Texture/: Texture.cpp  Texture.h
src/Model/VAO/: VAO.cpp  VAO.h
src/Model/VBO/: VBO.cpp  VBO.h
src/Shader/Compiler/: ShaderCompiler.cpp  ShaderCompiler.h
src/Shader/Loader/: ShaderLoader.cpp  ShaderLoader.h
src/Shader/glsl/: fragmentShader.glsl  vertexShader.glsl
src/Utils/: FrameBufferSizeCallback.cpp  FrameBufferSizeCallback.h  ShaderPaths.h
src/Utils/FrameBufferSize/: FrameBufferSizeCallback.cpp  FrameBufferSizeCallback.h
src/Utils/Paths/: ShaderPaths.h
src/Viewport/Camera/: Camera.cpp  Camera.h
src/shaders/: fragmentShader.glsl  vertexShader.glsl
